--- a/ui files/eg_main_menu.ui
+++ b/ui files/eg_main_menu.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Main Menu</string>
   </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
@@ -23,7 +23,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Test 1</string>
+    <string>Main Menu Test</string>
    </property>
   </widget>
  </widget>
