--- a/ui files/eg_physical_settings.ui
+++ b/ui files/eg_physical_settings.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>visualMenu</class>
- <widget class="QWidget" name="visualMenu">
+ <class>PhysMenu</class>
+ <widget class="QWidget" name="PhysMenu">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -85,7 +85,7 @@
            <string/>
           </property>
           <property name="pixmap">
-           <pixmap resource="../resources.qrc">:/icons/assets/icons/eye.png</pixmap>
+           <pixmap>:Images/physicaldisability.png</pixmap>
           </property>
           <property name="scaledContents">
            <bool>true</bool>
@@ -110,7 +110,7 @@
            </font>
           </property>
           <property name="text">
-           <string>Visual Tweaks</string>
+           <string>Physical Tweaks</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignHCenter|Qt::AlignTop</set>
@@ -126,7 +126,7 @@
            </size>
           </property>
           <property name="text">
-           <string>Display settings</string>
+           <string>Accessibility settings</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignHCenter|Qt::AlignTop</set>
@@ -134,7 +134,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="btnColorblind">
+         <widget class="QPushButton" name="controlsPB">
           <property name="minimumSize">
            <size>
             <width>389</width>
@@ -154,7 +154,7 @@ text-align: left;
 </string>
           </property>
           <property name="text">
-           <string>Colorblind Correction</string>
+           <string>Controls</string>
           </property>
           <property name="flat">
            <bool>false</bool>
@@ -162,7 +162,7 @@ text-align: left;
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="btnContrast">
+         <widget class="QPushButton" name="autofirePB">
           <property name="styleSheet">
            <string notr="true">QPushButton{
 text-align: left;
@@ -171,12 +171,12 @@ text-align: left;
 </string>
           </property>
           <property name="text">
-           <string>Contrast</string>
+           <string>Autofire</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="btnPOIHighlight">
+         <widget class="QPushButton" name="mainMenuPB">
           <property name="styleSheet">
            <string notr="true">QPushButton{
 text-align: left;
@@ -185,7 +185,7 @@ text-align: left;
 </string>
           </property>
           <property name="text">
-           <string>POI Highlighting</string>
+           <string/>
           </property>
          </widget>
         </item>
