Changed Back Buttons Name
Forgot to change this when I was changing names around to better fit descriptions. Adds the hover functionality back to what it was for the preset menus buttons.

--- a/ui files/eg_preset_download.ui
+++ b/ui files/eg_preset_download.ui
@@ -202,13 +202,13 @@
          </property>
          <property name="styleSheet">
           <string notr="true">
-            #btnBack {
+            #btnBackToPreset {
                 border: none;
                 background: transparent;
                 text-align: left;
                 padding: 6px 0px;
             }
-            #btnBack:hover {
+            #btnBackToPreset:hover {
                 text-decoration: underline;
             }
           </string>
