Color  Filtering & UI Control
Combined mine and Jayden's code
still need to handle the proper functionality of the color correction (have not adjusted the parts of our code together, so they overlap right now just ignore it)

--- a/ui files/eg_preset_download.ui
+++ b/ui files/eg_preset_download.ui
@@ -202,13 +202,13 @@
          </property>
          <property name="styleSheet">
           <string notr="true">
-            #btnBackToPreset {
+            #btnBack {
                 border: none;
                 background: transparent;
                 text-align: left;
                 padding: 6px 0px;
             }
-            #btnBackToPreset:hover {
+            #btnBack:hover {
                 text-decoration: underline;
             }
           </string>
