--- a/ui files/eg_visual_settings.ui
+++ b/ui files/eg_visual_settings.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>789</width>
-    <height>548</height>
+    <height>469</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -25,7 +25,7 @@
      <x>40</x>
      <y>40</y>
      <width>711</width>
-     <height>441</height>
+     <height>401</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="layoutWindow">
@@ -57,7 +57,7 @@
          <x>0</x>
          <y>0</y>
          <width>421</width>
-         <height>419</height>
+         <height>381</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="layoutContent">
@@ -175,9 +175,6 @@ text-align: left;
         </item>
         <item>
          <widget class="QWidget" name="colorOptions" native="true">
-          <property name="enabled">
-           <bool>true</bool>
-          </property>
           <property name="minimumSize">
            <size>
             <width>0</width>
@@ -277,68 +274,6 @@ text-align: left;
          </widget>
         </item>
         <item>
-         <widget class="QWidget" name="contrastOptions" native="true">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>50</height>
-           </size>
-          </property>
-          <widget class="QWidget" name="gridLayoutWidget_2">
-           <property name="geometry">
-            <rect>
-             <x>0</x>
-             <y>0</y>
-             <width>391</width>
-             <height>46</height>
-            </rect>
-           </property>
-           <layout class="QGridLayout" name="gridLayout_2">
-            <item row="2" column="0">
-             <widget class="QLabel" name="lblContrastScreen">
-              <property name="text">
-               <string>Screen Contrast Correction: </string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="0">
-             <widget class="QLabel" name="lblContrastUI">
-              <property name="text">
-               <string>UI Contrast Correction:</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="1">
-             <widget class="QSlider" name="sliderContrastUI">
-              <property name="maximumSize">
-               <size>
-                <width>200</width>
-                <height>16777215</height>
-               </size>
-              </property>
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="1">
-             <widget class="QSlider" name="sliderContrastScreen">
-              <property name="maximumSize">
-               <size>
-                <width>200</width>
-                <height>16777215</height>
-               </size>
-              </property>
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </widget>
-         </widget>
-        </item>
-        <item>
          <widget class="QPushButton" name="btnPOIHighlight">
           <property name="styleSheet">
            <string notr="true">QPushButton{
@@ -411,7 +346,7 @@ text-align: left;
          <x>420</x>
          <y>0</y>
          <width>271</width>
-         <height>421</height>
+         <height>381</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="layoutPreview">
@@ -453,7 +388,7 @@ text-align: left;
          </widget>
         </item>
         <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
-         <widget class="QWidget" name="colorPreview" native="true">
+         <widget class="QWidget" name="grid" native="true">
           <property name="minimumSize">
            <size>
             <width>200</width>
@@ -469,7 +404,7 @@ text-align: left;
           <property name="autoFillBackground">
            <bool>true</bool>
           </property>
-          <widget class="QLabel" name="label_3">
+          <widget class="QLabel" name="colorPreview">
            <property name="geometry">
             <rect>
              <x>0</x>
@@ -480,9 +415,6 @@ text-align: left;
            </property>
            <property name="text">
             <string/>
-           </property>
-           <property name="pixmap">
-            <pixmap>Images/pigment.png</pixmap>
            </property>
            <property name="scaledContents">
             <bool>true</bool>
